--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "million": "^1.9.8-4"
+    "million": "^1.10.0"
   },
   "devDependencies": {
     "vite": "^2.9.9"
