--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
+  "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "million": "^1.10.9"
+    "million": "^1.10.15-0"
   },
   "devDependencies": {
     "vite": "^2.9.9"
