--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "million": "^1.11.0-1"
+    "million": "^1.12.0-beta.0"
   },
   "devDependencies": {
-    "vite": "^2.9.9"
+    "vite": "^3.0.2"
   }
 }
