--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "million": "^1.12.0-beta.0"
+    "million": "^1.12.0"
   },
   "devDependencies": {
     "vite": "^3.0.2"
